<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Galeria">

    <ImageView
        android:id="@+id/imgicone7"
        android:layout_width="90dp"
        android:layout_height="99dp"
        android:contentDescription="@string/imgicone7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.694"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@drawable/teatropng2" />

    <TextView
        android:id="@+id/txttitulogaleria"
        android:layout_width="109dp"
        android:layout_height="45dp"
        android:text="@string/txttitulogaleria"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <ImageView
        android:id="@+id/imggal1"
        android:layout_width="205dp"
        android:layout_height="209dp"
        android:contentDescription="@string/imggal1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.584"
        app:srcCompat="@drawable/foto1" />

    <ImageView
        android:id="@+id/imggal2"
        android:layout_width="320dp"
        android:layout_height="321dp"
        android:contentDescription="@string/imggal2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136"
        app:srcCompat="@drawable/foto3" />

    <ImageView
        android:id="@+id/imggal3"
        android:layout_width="355dp"
        android:layout_height="244dp"
        android:contentDescription="@string/imggal3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/foto4" />

    <ImageView
        android:id="@+id/imggal4"
        android:layout_width="192dp"
        android:layout_height="176dp"
        android:contentDescription="@string/imggal4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.572"
        app:srcCompat="@drawable/foto5" />

</androidx.constraintlayout.widget.ConstraintLayout>